# CalculatorTask

./: .gitignore  CMakeLists.txt  main.cpp
headers/: Mul.h  Parser.h  Sub.h  Value.h  VeriableResolver.h
include/: Div.h  ExpressionEvaluator.h  ExpretionResolver.h  IDialogInput.h  Inode.h  Operator.h  Parser.h  Sum.h  Value.h  VariableResolver.h
src/: Div.cpp  ExpressionEvaluator.cpp  ExpretionResolver.cpp  Mul.cpp  Operator.cpp  Parser.cpp  Sub.cpp  Sum.cpp  TerminalInput.cpp  Value.cpp  VariableResolver.cpp  main.cpp
tests/: CMakeLists.txt  MockInputHandler.cpp  TestComplexExpressions.cpp  TestSubstr.cpp  TestSum.cpp
tests/integration/: TestExpressionEvaluator.cpp  TestExpretionResolver.cpp  TestTerminalInput.cpp
tests/unit/: TestOperator.cpp  TestParser.cpp  TestValue.cpp  TestVariableResolver.cpp
tests/util/: MockInputHandler.cpp
